# py-veer

./: .flake8  README.md  TODOs.md  setup.cfg  setup.py
tests/: test_config.json  test_config.py  test_config.yaml  test_in_container.py  test_in_subprocess.py  test_version.py  veer_test_container.def
veer/: __init__.py  _version.py  config.py  core.py  exception.py  logcfg.py  util.py
