[metadata]
name = veer
description = Seamless execution of Python code in different environments.
description-file = README.md
author = Oliver Breitwieser
author-email = oliver@breitwieser.eu
license = GPL3
project_urls =
    Source Code = https://github.com/obreitwi/py-veer
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    veer
